# goose

./: 404.html  index.html  skills-manifest.json
assets/js/: 0a45c249.d9205b1f.js  70657f53.311e1ee7.js  73b92c7e.9d50b9dd.js  814f3328.370bb1d4.js  97c73ffb.a82c3741.js  cc1a458b.dc5d2f8d.js  main.0917d310.js  runtime~main.f9a14770.js
blog/: atom.xml  index.html  rss.xml
blog/README/: index.html
blog/archive/: index.html
blog/authors/: index.html
community/: index.html
crates/goose/: Cargo.toml  acp-meta.json  acp-schema.json
crates/goose-mcp/: Cargo.toml
crates/goose-server/: Cargo.toml
deeplink-generator/: index.html
docs/experimental/: index.html
docs/goose-architecture/: index.html
docs/quickstart/: index.html
docs/troubleshooting/: index.html
extension/: index.html
extensions/: index.html
extensions/detail/: index.html
extensions/ssh-stateless/: README.md  pyproject.toml
extensions/ssh-stateless/src/mcp_ssh_stateless/: __init__.py  server.py
extensions/ssh-stateless/tests/: test_ssh_stateless.py
grants/: index.html
markdown-page/: index.html
pr-preview/pr-6755/: 404.html  index.html  sitemap.xml  skills-manifest.json
pr-preview/pr-6791/: 404.html  goose-docs-map.md  index.html  sitemap.xml  skills-manifest.json
pr-preview/pr-6857/: 404.html  goose-docs-map.md  index.html  sitemap.xml  skills-manifest.json
pr-preview/pr-6991/: 404.html  goose-docs-map.md  index.html  sitemap.xml  skills-manifest.json
prompt-library/: index.html
recipe-generator/: index.html
recipes/: index.html
skills/: index.html
(+2572 files in other folders)
