[project]
name = "mcp-ssh-stateless"
version = "0.1.0"
description = "Stateless SSH MCP server for goose – runs one-shot SSH commands with no persisted session state."
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.14.4",
    "paramiko>=3.5.1",
]

[project.scripts]
mcp-ssh-stateless = "mcp_ssh_stateless:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_ssh_stateless"]
